[BlinkGenPropertyTrees] Add scroll snap data for BGPT

This CL add the scroll snap data to ScrollNode for BGPT.

I manually tested scroll snap.

TEST=fast/scroll-snap/snap-scrolls-visual-viewport.html still flaky.

Bug: 877106
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux-blink-gen-property-trees;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I4199e4a7474c08e1b27b5d54528b1b371164fd62
Reviewed-on: https://chromium-review.googlesource.com/1195106
Reviewed-by: Philip Rogers <pdr@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Commit-Queue: Jianpeng Chao <chaopeng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587680}
Former-commit-id: 9d834f393e035b7dab36e7985d830eaab7dfca8b