third_party/blink/renderer/platform/graphics/paint/scroll_paint_property_node.h
@@ -5,6 +5,7 @@
 #ifndef THIRD_PARTY_BLINK_RENDERER_PLATFORM_GRAPHICS_PAINT_SCROLL_PAINT_PROPERTY_NODE_H_
 #define THIRD_PARTY_BLINK_RENDERER_PLATFORM_GRAPHICS_PAINT_SCROLL_PAINT_PROPERTY_NODE_H_
 
+#include "base/optional.h"
 #include "third_party/blink/renderer/platform/geometry/float_point.h"
 #include "third_party/blink/renderer/platform/geometry/float_size.h"
 #include "third_party/blink/renderer/platform/geometry/int_rect.h"
@@ -13,6 +14,7 @@
 #include "third_party/blink/renderer/platform/platform_export.h"
 #include "third_party/blink/renderer/platform/scroll/main_thread_scrolling_reason.h"
 #include "third_party/blink/renderer/platform/scroll/overscroll_behavior.h"
+#include "third_party/blink/renderer/platform/scroll/scroll_snap_data.h"
 
 namespace blink {
 
@@ -50,6 +52,7 @@ class PLATFORM_EXPORT ScrollPaintPropertyNode
     CompositorElementId compositor_element_id;
     OverscrollBehavior overscroll_behavior = blink::OverscrollBehavior(
         blink::OverscrollBehavior::kOverscrollBehaviorTypeAuto);
+    base::Optional<SnapContainerData> snap_container_data;
 
     bool operator==(const State& o) const {
       return container_rect == o.container_rect &&
@@ -62,7 +65,8 @@ class PLATFORM_EXPORT ScrollPaintPropertyNode
                  o.max_scroll_offset_affected_by_page_scale &&
              main_thread_scrolling_reasons == o.main_thread_scrolling_reasons &&
              compositor_element_id == o.compositor_element_id &&
-             overscroll_behavior == o.overscroll_behavior;
+             overscroll_behavior == o.overscroll_behavior &&
+             snap_container_data == o.snap_container_data;
     }
   };
 
@@ -93,6 +97,10 @@ class PLATFORM_EXPORT ScrollPaintPropertyNode
 
   OverscrollBehavior::OverscrollBehaviorType OverscrollBehaviorY() const {
     return state_.overscroll_behavior.y;
+  }
+
+  base::Optional<SnapContainerData> SnapContainerData() const {
+    return state_.snap_container_data;
   }
 
   // Rect of the container area that the contents scrolls in, in the space of
